--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,32 @@
 </head>
 <body>
 
-  Welcome to the HTML Portfolio Project
+<div class="header">
+  <h1>Richard Kelsey</h1>
+  <h2>Web Developer</h2>
+</div>
+
+<div class="tagline">
+  <h2>Maker of Cool Web Apps</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor explicabo ipsam iure modi optio sed unde. Dicta distinctio ea, ex facere illo iste, nam nisi ratione recusandae tenetur voluptate voluptatem?</p>
+</div>
+
+<div class="skills">
+
+  <ul>
+    <li>PHP</li>
+    <li>RUBY</li>
+    <li>HTML</li>
+  </ul>
+
+</div>
+
+<div class="contact">
+  <h3>Drop me a line</h3>
+  <p>There are many ways to contact me use the links below:
+    <a href="/#">Email</a>
+  </p>
+</div>
 
 </body>
 </html>
