added par to skills

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
 <div class="skills">
 <h3>My Skills</h3>
+  <p>I love woring with cuting edge technologies </p>
   <ul>
     <li>PHP</li>
     <li>RUBY</li>
